<resources>
    <string name="app_name">CubeXShop</string>
    <string name="name_app">CubeX Galaxy Shopping App</string>
    <string name="start">START</string>
    <string name="description_image_logo">imagen del logo de la app</string>
    <string name="login">LOGIN</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="please_fill_in_the_fields">Please fill in the fields</string>
    <string name="welcome">Welcome</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_word">Login</string>
    <string name="name">Name</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Home</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="otras_opciones">Otras opciones</string>
    <string name="log_out">Log Out</string>
</resources>